--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,5 @@ streamlit_authenticator==0.3.1
 streamlit_dynamic_filters==0.1.5
 streamlit_option_menu==0.3.12
 openpyxl==3.1.2
+plotly==5.19.0
+plotly-express==0.4.1
